--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">Pixel Bookshop</string>
-    <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="title_shop">Shop</string>
+    <string name="title_stock">Stockroom</string>
+    <string name="title_customise">Customise</string>
+    <string name="title_travel">Travel</string>
+    <string name="title_settings">Settings</string>
 </resources>
