--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,81 @@
     <string name="title_customise">Customise</string>
     <string name="title_travel">Travel</string>
     <string name="title_settings">Settings</string>
+
+    <string name="quality_new">New</string>
+    <string name="quality_fine">Fine</string>
+    <string name="quality_verygood">Very good</string>
+    <string name="quality_good">Good</string>
+    <string name="quality_fair">Fair</string>
+    <string name="quality_poor">Poor</string>
+
+    <string name="genre_actionadventure">Action &amp; Adventure</string>
+    <string name="genre_anthology">Anthology</string>
+    <string name="genre_classic">Classic</string>
+    <string name="genre_comic">Comic</string>
+    <string name="genre_crime">Crime</string>
+    <string name="genre_drama">Drama</string>
+    <string name="genre_fairytale">Fairytale</string>
+    <string name="genre_fanfiction">Fanfiction</string>
+    <string name="genre_fantasy">Fantasy</string>
+    <string name="genre_historicalfiction">Historical Fiction</string>
+    <string name="genre_horror">Horror</string>
+    <string name="genre_humor">Humor</string>
+    <string name="genre_legend">Legend</string>
+    <string name="genre_mystery">Mystery</string>
+    <string name="genre_mythology">Mythology</string>
+    <string name="genre_poetry">Poetry</string>
+    <string name="genre_romance">Romance</string>
+    <string name="genre_satire">Satire</string>
+    <string name="genre_sciencefiction">Science Fiction</string>
+    <string name="genre_thriller">Thriller</string>
+    <string name="genre_autobiography">Autobiography</string>
+    <string name="genre_biography">Biography</string>
+    <string name="genre_essay">Essay</string>
+    <string name="genre_narrative">Narrative</string>
+    <string name="genre_periodical">Periodical</string>
+    <string name="genre_reference">Reference</string>
+    <string name="genre_selfhelp">Self Help</string>
+    <string name="genre_speech">Speech</string>
+    <string name="genre_textbook">Textbook</string>
+
+    <string name="rarity_unique">Unique</string>
+    <string name="rarity_extremelyrare">Extremely Rare</string>
+    <string name="rarity_veryrare">Very Rare</string>
+    <string name="rarity_rare">Rare</string>
+    <string name="rarity_uncommon">Uncommon</string>
+    <string name="rarity_common">Common</string>
+
+    <string name="source_gift">Gift</string>
+    <string name="source_store">Store</string>
+    <string name="source_warehouse">Warehouse</string>
+
+    <string name="type_firstedition">First Edition</string>
+    <string name="type_signed">Signed</string>
+    <string name="type_hardback">Hardback</string>
+    <string name="type_paperback">Paperback</string>
+    <string name="type_reviewcopy">Review Copy</string>
+
+    <string name="defect_none">None</string>
+    <string name="defect_foldedpages">Folded Pages</string>
+    <string name="defect_stainedpages">Stained Pages</string>
+    <string name="defect_annotations">Annotations</string>
+    <string name="defect_missingcover">Missing Cover</string>
+    <string name="defect_stickered">Stickered</string>
+    <string name="defect_missingpages">Missing Pages</string>
+
+    <string name="title_hobbit">The Hobbit</string>
+    <string name="title_1984">1984</string>
+    <string name="title_vforvendetta">The Hobbit</string>
+    <string name="title_gameofthrones">A Game of Thrones</string>
+
+    <string name="author_tolkien">J.R.R. Tolkien</string>
+    <string name="author_orwell">George Orwell</string>
+    <string name="author_moore">Roger Moore</string>
+    <string name="author_rrmartin">George R.R. Martin</string>
+
+    <string name="url_tolkienhobbit">https://www.goodreads.com/book/show/5907.The_Hobbit_or_There_and_Back_Again</string>
+    <string name="url_orwell1984">https://www.goodreads.com/book/show/40961427-1984</string>
+    <string name="url_moorevendetta">https://www.goodreads.com/book/show/5805.V_for_Vendetta</string>
+    <string name="url_martingameofthrones">https://www.goodreads.com/book/show/13496.A_Game_of_Thrones</string>
 </resources>
