--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,12 @@
     <string name="stock_sort_text">Sorted by: %1$s (%2$s)</string>
     <string name="stock_dialog_order">Order</string>
     <string name="stock_dialog_cancel">Cancel</string>
+    <string name="stock_filter_text_set">Filtered by: %1$s</string>
+    <string name="stock_filter_text_unset">No filter</string>
+    <string name="stock_dialog_filter">Filter</string>
+    <string name="stock_published_filter">Before %1$d</string>
+    <string name="stock_in_furniture">On Display</string>
+    <string name="stock_in_storage">In Storage</string>
 
     <string name="book_sort_ascending">Ascending</string>
     <string name="book_sort_descending">Descending</string>
