--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,10 +7,9 @@
     <string name="title_messages">Messages</string>
 
     <string name="title_stock">Stockroom</string>
-    <string name="stock_sort_text">Sorted by: %1$s (%2$s)</string>
+    <string name="stock_sort_text">%1$s (%2$s)</string>
     <string name="stock_dialog_order">Order</string>
     <string name="stock_dialog_cancel">Cancel</string>
-    <string name="stock_filter_text_set">Filtered by: %1$s</string>
     <string name="stock_filter_text_unset">No filter</string>
     <string name="stock_dialog_filter">Filter</string>
     <string name="stock_published_filter">Before %1$d</string>
