--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,7 +23,7 @@
     <string name="stock_item_title">%1s (%2d) by %3s %4s</string>
 
     <string name="message_item_purchased">Purchased %1$s!</string>
-    <string name="message_cannot_afford_upgrade">Can\'t afford upgrade, need %1$d coins!</string>
+    <string name="message_cannot_afford_upgrade">Can\'t afford to upgrade %1$s, need %2$d coins!</string>
     <string name="message_cannot_upgrade_further">This is already fully upgraded!</string>
     <string name="message_books_only_in_display_furniture">Books can only be assigned to display furniture!</string>
     <string name="message_display_furniture_at_capacity">There are already %1$d books here!</string>
